--- a/src/app/etudiants/etudiants.component.html
+++ b/src/app/etudiants/etudiants.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="listFormations">
   <div class="panel panel-primary">
-    <div class="panel-heading">Liste des étudiants</div>
+    <div class="panel-heading">Liste des étudiants:</div>
       <div class="panel-body">
         <span *ngFor="let f of listFormations._embedded.formations">
           <button (click)= "onGetEtudiats(f)" [ngClass]="f.id==currentFormation.id? 'btn btn-danger' : 'btn btn-primary'">{{f.nom}}</button>
